--- a/requirements.txt
+++ b/requirements.txt
@@ -43,7 +43,8 @@ scipy==1.15.1
 six==1.17.0
 smmap==5.0.2
 streamlit==1.42.0
-streamlit-agraph  # <--- ADD THIS LINE
+streamlit-agraph
+streamlit-folium # <--- ADDED THIS LINE
 tenacity==9.0.0
 toml==0.10.2
 tornado==6.4.2
